--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -75,7 +75,7 @@
   aria-hidden="true"
 >
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content new-category-modal">
       <div class="modal-header">
         <h5 class="modal-title" id="createCategoryModalLabel">
           Create New Category
