--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,7 @@
             <span class="ms-2">{{ session.username }}</span>
           </button>
           <ul
-            class="dropdown-menu dropdown-menu-end"
+            class="dropdown-menu dropdown-menu-end profile-dropdown-menu"
             aria-labelledby="dropdownMenuButton"
           >
             <li>
@@ -62,8 +62,10 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-footer text-center mt-2">
-                  <a href="/logout" class="btn btn-primary btn-sm">Log Out</a>
+                <div class="card-footer text-center mt-3">
+                  <a href="/logout" class="btn btn-primary btn-sm mt-2"
+                    >Log Out</a
+                  >
                 </div>
               </div>
             </li>
