--- a/templates/messages.html
+++ b/templates/messages.html
@@ -27,7 +27,7 @@
           <i class="fas fa-ellipsis-v grey-icon"></i>
         </button>
         <ul
-          class="dropdown-menu dropdown-menu-end"
+          class="dropdown-menu dropdown-menu-end edit-message-menu"
           aria-labelledby="messageMenu{{ message.id }}"
         >
           <li>
