--- a/templates/category.html
+++ b/templates/category.html
@@ -57,6 +57,7 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
     </div>
     <div class="col-9">
       <div class="container">
+        {% if threads %}
         <div class="d-flex justify-content-between align-items-center">
           <h2 class="mb-5 mx-auto">{{ selected_thread.title }}</h2>
 
@@ -128,6 +129,11 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
             </form>
           </div>
         </div>
+        {% else %}
+        <div class="text-center">
+          <p>Please create a thread to start a discussion.</p>
+        </div>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -140,7 +146,7 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
     aria-hidden="true"
   >
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content new-thread-modal">
         <div class="modal-header">
           <h5 class="modal-title" id="createThreadModalLabel">
             Create New Thread
