--- a/templates/layout.html
+++ b/templates/layout.html
@@ -75,12 +75,7 @@
       </div>
     </header>
 
-    {% block content %}{% endblock %}
-
-    <footer class="footer fixed-bottom">
-      <hr />
-      Tietokannat ja web-ohjelmointi 2024
-    </footer>
+    {% block content %}{% endblock %} {% include "footer.html" %}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
