--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -55,12 +55,14 @@
           category.last_message_timestamp else 'No messages yet' }}
         </p>
       </a>
+      {% if session.role == 'admin' %}
       <button
         class="btn btn-dark btn-sm delete-category"
         data-category-id="{{ category['category_id'] }}"
       >
         <i class="fa-solid fa-trash-can"></i>
       </button>
+      {% endif %}
     </div>
     {% endfor %}
   </div>
