Prevent user from saving empty thread or message when editing

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -112,6 +112,11 @@
       `#edit-message-${messageId}`
     ).value;
 
+    if (!editedContent) {
+      alert("Content cannot be empty.");
+      return;
+    }
+
     const csrfToken = document.getElementById("csrf_token").value;
 
     fetch(`/update-message/${messageId}`, {
